Censors, I2C with changing values

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := sensors_LCD
+BUILD_ARTIFACT_NAME := Assignment03
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-sensors_LCD.elf \
+Assignment03.elf \
 
 MAP_FILES += \
-sensors_LCD.map \
+Assignment03.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-sensors_LCD.list \
+Assignment03.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: sensors_LCD.elf secondary-outputs
+main-build: Assignment03.elf secondary-outputs
 
 # Tool invocations
-sensors_LCD.elf sensors_LCD.map: $(OBJS) $(USER_OBJS) D:\WorksGt\1.New\lab-3-nshuti-rwema\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "sensors_LCD.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\WorksGt\1.New\lab-3-nshuti-rwema\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="sensors_LCD.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Assignment03.elf Assignment03.map: $(OBJS) $(USER_OBJS) C:\Users\imrwe\STM32CubeIDE\workspace_1.14.1\Assignment03\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Assignment03.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\imrwe\STM32CubeIDE\workspace_1.14.1\Assignment03\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Assignment03.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-sensors_LCD.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "sensors_LCD.list"
+Assignment03.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "Assignment03.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout sensors_LCD.elf sensors_LCD.list sensors_LCD.map
+	-$(RM) Assignment03.elf Assignment03.list Assignment03.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
