--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sensors_LCD</name>
+	<name>Assignment03</name>
 	<comment></comment>
 	<projects>
 	</projects>
